#38 - Added aria-label to select, adjusted subheading contrast, added lang and fixed header order

--- a/theme/less/_header.less
+++ b/theme/less/_header.less
@@ -5,7 +5,7 @@ header
 
 header > p
 {
-  color: #7d7d7d;
+  color: #757575;
   font-size: 24px;
   letter-spacing: -1px;
   line-height: 25px;
