--- a/theme/less/homepage.less
+++ b/theme/less/homepage.less
@@ -62,8 +62,10 @@ main article > *:first-child
   margin: 0!important;
 }
 
-.box h3 
+.box h2 
 {
+  font-size: 1.4em;
+  line-height: 120%;
   margin: 0;
 }
 
